Add first main section in html file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         </ul>
     </header>
     <div class="first main">
-        
+        <div class="first-left">
+            <h1>This website is awsome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <div class="first-right">this is aplaceholder for an image</div>
     </div>
 </body>
 </html>
