--- a/index.html
+++ b/index.html
@@ -24,5 +24,12 @@
         </div>
         <div class="first-right">this is a placeholder for an image</div>
     </div>
+    <h2>Some random information.</h2>
+    <div class="second main">
+        <div><div class="icon"></div><p>this is some subtext under an illustration or image</p></div>
+        <div><div class="icon"></div><p>this is some subtext under an illustration or image</p></div>
+        <div><div class="icon"></div><p>this is some subtext under an illustration or image</p></div>
+        <div><div class="icon"></div><p>this is some subtext under an illustration or image</p></div>
+    </div>
 </body>
 </html>
