--- a/index.html
+++ b/index.html
@@ -31,5 +31,10 @@
         <div><div class="icon"></div><p>this is some subtext under an illustration or image</p></div>
         <div><div class="icon"></div><p>this is some subtext under an illustration or image</p></div>
     </div>
+    <div class="third main">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
+            All I know os that it looks nice.</p>
+        <p class="author">-Thor, God of Thunder</p>
+    </div>
 </body>
 </html>
