--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
         </div>
         <button>Sign up</button>
     </div>
+    <footer>Copyright &copy The Odin Project</footer>
 </body>
 </html>
